# investment-logic-audit-lab

./: .env.example  CODEX.md  README.md  REFACTORING_NOTES.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: README.md
docs/: architecture.md  architecture.mmd  research_plan.md  setup.md
docs/workflows/: ci.yml  repository-inventory.yml
src/investment_audit/: __init__.py  backtest.py  cli.py  data.py  github_repos.py  reporting.py  sec_companyfacts.py  signals.py  utils.py  walk_forward.py
tests/: test_backtest.py  test_cli.py  test_signals.py  test_walk_forward.py
